# kubequest-app-frontend

./: .env.development  .env.development-remote  .env.production  .env.staging  CHANGELOG.md  README.md  capacitor.config.ts  cypress.config.ts  docker-compose.yml  eslint.config.js  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: build_deploy_cluster_production.yaml  init-tests_build_deploy_cluster_development-remote-web.yaml  init-tests_build_deploy_cluster_staging-web.yaml  init-tests_build_deploy_staging-mobile.yaml  init-update-files-and-push.yaml  tests_deploy-release.yaml
android/app/: build.gradle
docker/development-remote/: Dockerfile
docker/production/: Dockerfile
docker/staging/: Dockerfile
fastlane/: Fastfile
fastlane/metadata/: app_rating_config.json  copyright.txt
fastlane/metadata/default/: subtitle.txt  (+4 more)
ios/App/: Podfile
k8s/development-remote/: certificate.yaml  deployment.yaml  docker-registry-secret.yaml  ingress.yaml  namespace.yaml  service.yaml
k8s/production/: certificate.yaml  deployment.yaml  docker-registry-secret.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
k8s/staging/: certificate.yaml  deployment.yaml  docker-registry-secret.yaml  ingress.yaml  namespace.yaml  service.yaml
src-nuxt/pages/: index.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  updater.json
src-tauri/binarie-sign-windows/: AzureSign.Core.xml  AzureSignTool.deps.json  AzureSignTool.runtimeconfig.json
src-tauri/capabilities/: default.json
src-tauri/legal/: LICENSE.txt
src-tauri/scripts/: beforeBuildCommand.ts  beforeDevCommand.ts  windowsSign.bat
src-tauri/src/: lib.rs  main.rs
(+20 files in other folders)
