[package]
name = "flapi-customername-projectname"
version = "0.0.0"
description = "Flapi customerName projectName"
authors = ["corentin recanzone"]
edition = "2021"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "projectname_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = ["macos-private-api"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.4.0"

# Server development
[profile.dev]
panic = "abort" # Éliminer la logique de nettoyage de panique coûteuse
opt-level = 0   # Moins d'optimisation pour un temps de compilation plus rapide et moins d'utilisation de mémoire

# Optimize build for Release
[profile.release]
panic = "abort"   # Éliminer la logique de nettoyage de panique coûteuse
codegen-units = 1 # Compiler les crates l'une après l'autre pour que le compilateur puisse optimiser mieux
lto = true        # Active les optimisations de link
opt-level = "s"   # Optimiser la taille du binaire
strip = true      # Supprimer automatiquement les symboles du binaire.
